<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/incoming_report"
        android:name="com.example.cybersafe.IncomingReportsMain"
        android:label="@string/incoming_reports"
        tools:layout="@layout/activity_incoming_reports" />


    <fragment
        android:id="@+id/add_detection"
        android:name="com.example.cybersafe.Add_Detection_Keyword"
        android:label="@string/add_detection_keyword"
        tools:layout="@layout/activity_add__detection__keyword" />


    <fragment
        android:id="@+id/view_report"
        android:name="com.example.cybersafe.ViewReportedBullyingMain"
        android:label="@string/ViewReported"
        tools:layout="@layout/activity_view_reported_bullying_list" />


</navigation>
