<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/blue"
            android:layout_centerInParent="true"
            tools:ignore="MissingConstraints" />

            <ImageView
        android:id="@+id/arrowIncomP"
        android:layout_width="49dp"
        android:layout_height="60dp"
        android:contentDescription="@string/left_arrow"
        app:srcCompat="@drawable/abc_vector_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

            <ImageView
                android:id="@+id/homeIncomP"
                android:layout_width="49dp"
                android:layout_height="60dp"
                android:contentDescription="@string/home"
                app:srcCompat="@drawable/Home"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="350dp"
                tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incoming_reports"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="140dp"
        tools:layout_editor_absoluteY="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>